--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <meta name="format-detection" content="telephone=no">
   <meta name="msapplication-tap-highlight" content="no">
 
-  <meta name="theme-color" content="#387ef5">
+  <meta name="theme-color" content="#ff9933">
 
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
